adding JWT auth
