# app/Http/Controllers/Swagger/MainController.php
@@ -13,6 +13,13 @@ use Illuminate\Http\Request;
  * @OA\PathItem (
  * path="/api/"
  * ),
+ * @OA\Components(
+ *     @OA\SecurityScheme(
+ *         securityScheme="bearerAuth",
+ *         type = "http",
+ *         scheme = "bearer"
+ *     )
+ * )
  */
 
 class MainController extends Controller
